--- a/src/components/Acoes/Acoes.css
+++ b/src/components/Acoes/Acoes.css
@@ -8,11 +8,19 @@
 }
 
 .Acao {
-    width: fit-content;
-    flex: 1 1 0px;
     width: 150px;
+    
     border: solid 1px #000;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+.Acao button {
+    margin: 10px 0;
+    padding: 4px;
+    width: fit-content;
+    border-radius: 6px;
+    
 }
